<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/musicBackground"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                tools:text="@string/music_name" />

            <TextView
                android:id="@+id/songArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="15sp"
                tools:text="@string/music_artist" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!--播放模式-->
                <ImageView
                    android:id="@+id/ivMode"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/background_button_icon"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_player_circle"
                    tools:ignore="ContentDescription" />

                <!--上一首-->
                <ImageView
                    android:id="@+id/ivLast"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/background_button_icon"
                    android:contentDescription="@string/previous"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_player_previous"
                    tools:ignore="VectorDrawableCompat" />

                <!--播放暂停按钮-->
                <ImageView
                    android:id="@+id/ivPlay"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/background_button_icon"
                    app:srcCompat="@drawable/ic_player_pause"
                    tools:ignore="VectorDrawableCompat" />


                <!--下一首-->
                <!--使用上一首的src然后进行180度调转-->
                <ImageView
                    android:id="@+id/ivNext"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/background_button_icon"
                    android:contentDescription="@string/next"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_player_next"
                    tools:ignore="VectorDrawableCompat" />

                <!--喜欢-->
                <ImageView
                    android:id="@+id/ivLike"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="16dp"
                    android:contentDescription="@string/favor_add"
                    android:background="@drawable/background_button_icon"
                    app:srcCompat="@drawable/ic_player_like"/>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>