<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clPlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBackground"
    android:visibility="visible"
    tools:context=".player.PlayerActivity">

    <!--歌词整体背景-->
    <ImageView
        android:id="@+id/ivLyricsBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/clBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="ContentDescription"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="28dp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:text="@string/music_name"
            android:textColor="@color/colorTextForeground"
            android:textSize="22sp"
            android:transitionName="tvName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingStart="1dp"
            android:singleLine="true"
            android:text="@string/music_artist"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextForeground"
            android:textSize="16sp"
            android:transitionName="tvArtist"
            app:layout_constraintEnd_toEndOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvName"/>

        <include
            android:id="@+id/includePlayerCover"
            layout="@layout/player_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvArtist" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--当前时间-->
        <TextView
            android:id="@+id/tvCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            app:layout_constraintBottom_toTopOf="@id/clControl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sb_song"/>

        <!--拖动条-->
        <SeekBar
            android:id="@+id/sb_song"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            style="?android:attr/seekBarStyle"
            android:alpha="0.72"
            android:maxHeight="2dp"
            android:minHeight="4dp"
            android:progressDrawable="@drawable/background_seek_bar_music"

            android:background="@null"
            android:thumb="@drawable/background_seek_bar_thumb"
            android:thumbTint="@color/black"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--歌曲总时间-->
        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="03:00"
            app:layout_constraintBottom_toTopOf="@id/clControl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sb_song"/>

        <!--控制栏-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clControl"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            
            <!--播放暂停按钮-->
            <ImageView
                android:id="@+id/ivPlay"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/background_button_icon"
                app:srcCompat="@drawable/ic_player_pause"
                tools:ignore="VectorDrawableCompat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <!--上一首-->
            <ImageView
                android:id="@+id/ivLast"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_button_icon"
                android:contentDescription="@string/previous"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivPlay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/ic_player_previous"
                tools:ignore="VectorDrawableCompat"/>

            <!--下一首-->
            <!--使用上一首的src然后进行180度调转-->
            <ImageView
                android:id="@+id/ivNext"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_button_icon"
                android:contentDescription="@string/next"
                android:padding="16dp"
                android:rotation="180"
                app:layout_constraintStart_toEndOf="@+id/ivPlay"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/ic_player_previous"
                tools:ignore="VectorDrawableCompat"/>

            <!--播放模式-->
            <ImageView
                android:id="@+id/ivMode"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/background_button_icon"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_player_circle"
                tools:ignore="ContentDescription" />

            <!--喜好-->
            <ImageView
                android:id="@+id/ivFavor"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/background_button_icon"
                android:contentDescription="@string/favor_music"
                android:padding="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_player_like" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>